<resources>
    <string name="app_name">OOP_3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_account">Account</string>
    <string name="menu_team">Teams</string>
    <string name="menu_tournament">Tournaments</string>
    <string name="menu_players">Players</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
