<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_tournament"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tournament" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_player"
            android:title="@string/menu_players" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
