<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.oop_3.ui.account.HomeFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_team"
        android:name="com.example.oop_3.ui.teams.TeamsFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_teams" />

    <fragment
        android:id="@+id/nav_tournament"
        android:name="com.example.oop_3.ui.tournament.TournamentFragment"
        android:label="@string/menu_tournament"
        tools:layout="@layout/fragment_tournament" />

    <fragment
        android:id="@+id/nav_player"
        android:name="com.example.oop_3.ui.players.PlayersFragment"
        android:label="@string/menu_players"
        tools:layout="@layout/fragment_players" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.oop_3.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.oop_3.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>